tests/lean/4309.lean.expected.out
4309.lean:3:7-3:9: error: unexpected token ':'; expected identifier
