tests/lean/4309.lean

@[simp]
theorem : True := by constructor
